07-kubernetes/13-network-operation/src/deployments.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-frontend
  namespace: app
  labels:
    app: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: wbitt/network-multitool
          resources:
            limits:
              memory: 256Mi
              cpu: "1"
          ports:
            - name: http
              containerPort: 80
            - name: https
              containerPort: 443
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-backend
  namespace: app
  labels:
    app: backend
spec:
  selector:
    matchLabels:
      app: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: wbitt/network-multitool
          resources:
            limits:
              memory: 256Mi
              cpu: "1"
          ports:
            - name: http
              containerPort: 80
            - name: https
              containerPort: 443
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-cache
  namespace: app
  labels:
    app: cache
spec:
  selector:
    matchLabels:
      app: cache
  replicas: 1
  template:
    metadata:
      labels:
        app: cache
    spec:
      containers:
        - name: cache
          image: wbitt/network-multitool
          resources:
            limits:
              memory: 256Mi
              cpu: "1"
          ports:
            - name: http
              containerPort: 80
            - name: https
              containerPort: 443
