07-kubernetes/13-network-operation/src/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: app-frontend
  namespace: app
  labels:
    app: frontend
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - name: http-frontend
      protocol: TCP
      port: 7080
      targetPort: 80
      nodePort: 30780
    - name: https-frontend
      protocol: TCP
      port: 7083
      targetPort: 443
      nodePort: 30783

---
apiVersion: v1
kind: Service
metadata:
  name: app-backend
  namespace: app
  labels:
    app: backend
spec:
  type: NodePort
  selector:
    app: backend
  ports:
    - name: http-backend
      protocol: TCP
      port: 8080
      targetPort: 80
      nodePort: 30880
    - name: https-backend
      protocol: TCP
      port: 8083
      targetPort: 443
      nodePort: 30883

---
apiVersion: v1
kind: Service
metadata:
  name: app-cache
  namespace: app
  labels:
    app: cache
spec:
  type: NodePort
  selector:
    app: cache
  ports:
    - name: http-cache
      protocol: TCP
      port: 9080
      targetPort: 80
      nodePort: 30980
    - name: https-cache
      protocol: TCP
      port: 9083
      targetPort: 443
      nodePort: 30983
